2018-12-13  Andreas Schwab  <schwab@suse.de>

	[BZ #23861]
	* nptl/pthread_rwlock_common.c: Reindent.  Fix typos.
	(__pthread_rwlock_rdlock_full): Update expected value for
	__readers while waiting on PTHREAD_RWLOCK_RWAITING.
	* nptl/tst-rwlock-pwn.c: New file.
	* nptl/Makefile (tests): Add tst-rwlock-pwn.

2018-12-12  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #23614]
	* sysdeps/powerpc/powerpc64/addmul_1.S (FUNC): Add CFI offset for
	registers saved in the stack frame.
	* sysdeps/powerpc/powerpc64/lshift.S (__mpn_lshift): Likewise.
	* sysdeps/powerpc/powerpc64/mul_1.S (__mpn_mul_1): Likewise.

2018-12-07  DJ Delorie  <dj@redhat.com>

	[BZ #23907]
	* malloc/tst-tcfree3.c: New.
	* malloc/Makefile: Add it.

2018-12-07  Florian Weimer  <fweimer@redhat.com>

	[BZ #23927]
	CVE-2018-19591
	* inet/tst-if_index-long.c: New file.
	* inet/Makefile (tests): Add tst-if_index-long.

2018-12-07  Florian Weimer  <fweimer@redhat.com>

	* support/check.h (support_record_failure_is_failed): Declare.
	* support/descriptors.h: New file.
	* support/support_descriptors.c: Likewise.
	* support/tst-support_descriptors.c: Likewise.
	* support/support_record_failure.c
	(support_record_failure_is_failed): New function.
	* support/Makefile (libsupport-routines): Add support_descriptors.
	(tests): Add tst-support_descriptors.

2018-12-01  Florian Weimer  <fweimer@redhat.com>

	* support/support_capture_subprocess.c
	(support_capture_subprocess): Check that pipe descriptors have
	expected values.  Close original pipe descriptors in subprocess.

2018-11-28  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Do not use str
	parameter name.

2018-11-27  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Declare.
	* support/support_quote_string.c: New file.
	* support/tst-support_quote_string.c: Likewise.
	* support/Makefile (libsupport-routines): Add
	support_quote_string.
	(tests): Add tst-support_quote_string.
