@@ -1,3 +1,9 @@
+2018-12-15  Florian Weimer  <fweimer@redhat.com>
+
+	* support/blob_repeat.c (check_mul_overflow_size_t): New function.
+	(minimum_stride_size): Use it.
+	(support_blob_repeat_allocate): Likewise.
+
 2018-12-13  Andreas Schwab  <schwab@suse.de>
 
 	[BZ #23861]
